# kondo

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yaml  kondo.db-journal  pyproject.toml
alembic/versions/: 1b2c3d4e5f60_add_calendar_and_resident_onboarding.py  695aef4d438c_add_chat_sessions.py
app/: main.py  seed.py
app/core/: config.py  deps.py
app/models/: __init__.py  base.py  calendar.py  chat.py  identity.py  operations.py  property.py  vendors.py
app/routers/: agreements.py  ai.py  attachments.py  calendar.py  condominiums.py  documents.py  experiences.py  finance.py
app/schemas/: agreements.py  ai_chat.py  announcements.py  attachments.py  calendar.py  condominiums.py  dashboard.py  finance.py  kanban.py  payments.py  tickets.py
app/services/: agreement_service.py  ai_chat_service.py  ai_service.py  attachment_service.py  audit_service.py  calendar_service.py  condominium_service.py  document_rag_service.py  experience_service.py  finance_service.py  (+5 more)
backend/: .env.example  README.md  pyproject.toml
docs/: ai.md  api.md  architecture.md  backend-roadmap.md  backend.md  comercial.md  data-model.md  demo-script.md  development-rules.md  frontend.md  narration-script.md  pitch-deck.html  pitch.md  platform.md  product.md  repository-split.md  review-checklist.md  test-script.md  use-cases.md  video-script.md  whatsapp.md
frontend/: package-lock.json
tests/: conftest.py  test_ai_chat.py  test_attachments.py  test_content_workflows.py  test_experiences.py  test_financial_workflows.py  test_operational_workflows.py
(+91 files in other folders)
